# Ai_learning

./: .gitattributes  .gitignore  1.py  README.md  local_model.py  pyproject.toml
R0_Implement_Basic_RAG/: README.md
R1_Evaluation_Framework/: ARES.jsonl  RAG.py  README.md  baseline_run_results.jsonl  embedding.py  evaluate_with_ragas.py  golden_dataset.jsonl  ragas_eval.py
R1_Evaluation_Framework/chroma_db/: chroma.sqlite3
R2_Retrieval_Optimization/: HyDE.py  Hybrid  Hybrid.jsonl  Intelligent_Chunking.py  Query_Transformation.py  README.md  bm25.py  hybrid_search.py  hyde_redults.jsonl  run_results.jsonl
R3_Generation_Enhancement/: README.md
R4_Multimodal_RAG/: README.md
R5_Advanced_RAG/: README.md
R6_System_Optimization/: README.md
R7_Production_Deployment/: README.md
RAG/: pyvenv.cfg
RAG/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jsondiff  jsonpatch  jsonpointer  undill
W4_AI_Agent/: t2_simple_agent.py  t3_auto_reporter.py
chroma_test_db/: chroma.sqlite3
my_app/: README.md  pyproject.toml
my_app/app/: server.py
work/: 01完成一次问答.py  02通过 Google 搜索并返回答案.py  README.md
work/W1-Basic equipment and tool library/: T1-HTTP Signal Corps.py  T2-JSON Intelligence Analyst.py  T4-request_calls_large_model.py
work/W1_Basic_equipment_and_tool_library/: T.md  T6_Crawl_Sina_News_homepage.py
work/W2-Parts of the RAG system/: T2-text segmentation.py
work/W2_Parts of the RAG system/: T4_Creating_complete_RAG_chain.py  T5_Encapsulate_into_function_or_class.py
work/W3_Upgrade_RAG_to_Web_interface_product/: t2_rag_api.py  (+3 more)
(+18 files in other folders)
