[project]
name = "llmleaning"
version = "0.1.0"
description = ""
authors = [
    {name = "DESKTOP-F0CDBTP\\zyh",email = "1445450620@qq.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-tavily (>=0.2.10,<0.3.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
